--- a/_config.yml
+++ b/_config.yml
@@ -113,11 +113,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "JaeHyeon"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Catholic University MTC"
+  location         : "republic of korea"
+  email            : "semicolon0504@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
